--- a/Models/Interior/Panel/Instruments/asi/asi.ac
+++ b/Models/Interior/Panel/Instruments/asi/asi.ac
@@ -1,7 +1,7 @@
 AC3Db
 MATERIAL "DefaultWhite" rgb 1 1 1  amb 1 1 1  emis 0 0 0  spec 0.5 0.5 0.5  shi 64  trans 0
 MATERIAL "DefaultWhite" rgb 1 1 1 amb 1 1 1 emis 0 0 0 spec 0.5 0.5 0.5 shi 64 trans 0
-MATERIAL "transparent.002" rgb 0.547091 0.565624 0.595981 amb 0 0 0 emis 0 0 0 spec 1 1 1 shi 64 trans 0.5
+MATERIAL "transparent" rgb 0.9 0.9 0.9 amb 0 0 0 emis 0 0 0 spec 1 1 1 shi 64 trans 0.85
 OBJECT world
 kids 4
 OBJECT poly
@@ -7566,8 +7566,8 @@ refs 4
 kids 0
 OBJECT poly
 name "vitre"
-data 9
-vitre.002
+data 5
+vitre
 crease 30.000000
 numvert 275
 0.012084 -6.7e-05 -4.1e-05
